--- a/cogs_to_recogs.ipynb
+++ b/cogs_to_recogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "6f2f9d0b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "774b0419",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "3c05a25a",
    "metadata": {},
    "outputs": [],
@@ -239,14 +239,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ab177ea0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>LF</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Liam hoped that a box was burned by a girl .</td>\n",
+       "      <td>Liam ( 30 ) ; box ( 29 ) ; girl ( 17 ) ; hope ...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The donkey lended the cookie to a mother .</td>\n",
+       "      <td>* donkey ( 3 ) ; * cookie ( 26 ) ; mother ( 59...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A melon was given to a girl by the guard .</td>\n",
+       "      <td>melon ( 30 ) ; girl ( 40 ) ; * guard ( 59 ) ; ...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A donut was given to a butterfly .</td>\n",
+       "      <td>donut ( 0 ) ; butterfly ( 25 ) ; give ( 11 ) A...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A rose was mailed to Isabella .</td>\n",
+       "      <td>rose ( 15 ) ; Isabella ( 32 ) ; mail ( 16 ) AN...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2995</th>\n",
+       "      <td>A frog supported that the box was appreciated .</td>\n",
+       "      <td>frog ( 59 ) ; * box ( 38 ) ; support ( 25 ) AN...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2996</th>\n",
+       "      <td>Ava gave the cake to Emma .</td>\n",
+       "      <td>Ava ( 24 ) ; * cake ( 1 ) ; Emma ( 3 ) ; give ...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2997</th>\n",
+       "      <td>Benjamin intended to clean .</td>\n",
+       "      <td>Benjamin ( 16 ) ; intend ( 23 ) AND agent ( 23...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2998</th>\n",
+       "      <td>Ethan rolled a ring .</td>\n",
+       "      <td>Ethan ( 38 ) ; ring ( 52 ) ; roll ( 27 ) AND a...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2999</th>\n",
+       "      <td>Matthew handed a bird the cookie beside the ta...</td>\n",
+       "      <td>Matthew ( 4 ) ; bird ( 8 ) ; * cookie ( 28 ) ;...</td>\n",
+       "      <td>in_distribution</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3000 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               sentence  \\\n",
+       "0          Liam hoped that a box was burned by a girl .   \n",
+       "1            The donkey lended the cookie to a mother .   \n",
+       "2            A melon was given to a girl by the guard .   \n",
+       "3                    A donut was given to a butterfly .   \n",
+       "4                       A rose was mailed to Isabella .   \n",
+       "...                                                 ...   \n",
+       "2995    A frog supported that the box was appreciated .   \n",
+       "2996                        Ava gave the cake to Emma .   \n",
+       "2997                       Benjamin intended to clean .   \n",
+       "2998                              Ethan rolled a ring .   \n",
+       "2999  Matthew handed a bird the cookie beside the ta...   \n",
+       "\n",
+       "                                                     LF             type  \n",
+       "0     Liam ( 30 ) ; box ( 29 ) ; girl ( 17 ) ; hope ...  in_distribution  \n",
+       "1     * donkey ( 3 ) ; * cookie ( 26 ) ; mother ( 59...  in_distribution  \n",
+       "2     melon ( 30 ) ; girl ( 40 ) ; * guard ( 59 ) ; ...  in_distribution  \n",
+       "3     donut ( 0 ) ; butterfly ( 25 ) ; give ( 11 ) A...  in_distribution  \n",
+       "4     rose ( 15 ) ; Isabella ( 32 ) ; mail ( 16 ) AN...  in_distribution  \n",
+       "...                                                 ...              ...  \n",
+       "2995  frog ( 59 ) ; * box ( 38 ) ; support ( 25 ) AN...  in_distribution  \n",
+       "2996  Ava ( 24 ) ; * cake ( 1 ) ; Emma ( 3 ) ; give ...  in_distribution  \n",
+       "2997  Benjamin ( 16 ) ; intend ( 23 ) AND agent ( 23...  in_distribution  \n",
+       "2998  Ethan ( 38 ) ; ring ( 52 ) ; roll ( 27 ) AND a...  in_distribution  \n",
+       "2999  Matthew ( 4 ) ; bird ( 8 ) ; * cookie ( 28 ) ;...  in_distribution  \n",
+       "\n",
+       "[3000 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "dev_df\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bade5b81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
